2005-09-18 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c (lsp_update): Fix previous commit - manipulate the right
	  database and only if LSP is really in the database (sanity check).

2005-09-16 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c (lsp_update): Remove LSP from database before updating
	  its data and put it back after. Database entry MUST contain at least
	  correct pointers to the sysid to get correct compare results.
	* isis_lsp.[ch], isis_pdu.c: Pass level to the lsp_update() function.

2005-09-05 Hasso Tepper <hasso at quagga.net>

	* *.c: Try to be less verbose by default (without any debug options
	  on).
	* isis_lsp.c (lsp_build_nonpseudo): Use stream_reset() instead of
	  touching endp directly.
	* isis_lsp.c (lsp_build_pseudo): Ditto.

2005-09-03 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Yet another regression introduced by stream cleanup.
	  Similar fix to the one commited to lsp_build_nonpseudo() some days
	  ago.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Less TLV leaking.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* random.c, spgrid.[ch]: Fix warnings with hope that I didn't broke
	  anything. These floats to longs and vice versa casts are starnge
	  indeed.
	* isis_pdu.c: As we don't use %z for size_t for now because we support
	  older compilers, cast them to unsigned long.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* isis_adjacency.c, isis_lsp.c, isisd.c: Replace XMALLOC && memset
	  with XCALLOC.
	* isis_lsp.c (lsp_build_pseudo): Fix adding ES neighbour.
	* isis_tlv.c: More compact free_tlvs() function.
	* isis_lsp.c (lsp_build_nonpseudo) : Try to fix one more regression
	  introduced by stream cleanup. Seek endp to the right place before
	  starting to fill stream with TLVs.

2005-08-16 Hasso Tepper <hasso at quagga.net>

	* isis_misc.[ch]: Fix some warnings, making some strings const.

2005-08-10 Hasso Tepper <hasso at quagga.net>
